tests/ui/const-generics/mgca/free-const-recursive.stderr
error[E0275]: overflow evaluating the requirement `A == _`
  --> $DIR/free-const-recursive.rs:7:1
   |
LL | type const A: () = A;
   | ^^^^^^^^^^^^^^^^

error[E0275]: overflow evaluating the requirement `A == _`
  --> $DIR/free-const-recursive.rs:7:1
   |
LL | type const A: () = A;
   | ^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0284]: type annotations needed
  --> $DIR/free-const-recursive.rs:7:1
   |
LL | type const A: () = A;
   | ^^^^^^^^^^^^^^^^ cannot infer the value of the constant `_`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0275, E0284.
For more information about an error, try `rustc --explain E0275`.
